--- a/LOG4NET/log4net.config
+++ b/LOG4NET/log4net.config
@@ -1,40 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net>
-  <logger name="logerror">
-    <level value="ERROR" />
-    <appender-ref ref="ErrorAppender" />
-  </logger>
-  <logger name="loginfo">
-    <level value="INFO" />
-    <appender-ref ref="InfoAppender" />
-  </logger>
-  <appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Log//Error//" />
-    <Encoding value="UTF-8" />
-    <param name="AppendToFile" value="true" />
-    <param name="CountDirection" value="-1" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="MaximumFileSize" value="20MB" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="DatePattern" value="yyyyMMdd&quot;.html&quot;" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="Header" value="&lt;html&gt;&lt;head&gt;&lt;style type=&quot;text/css&quot;&gt;body { font-size:16px; font-family:微软雅黑; } pre { font-size:14px; font-family:Arial; line-height: 18px; background-color: #EEE; padding: 20px; }&lt;/style&gt;&lt;/head&gt;&lt;body onload=&quot;javascript:document.documentElement.scrollTop=99999999;&quot;&gt;" />
-      <param name="ConversionPattern" value="%n&lt;hr color=&quot;red&quot;/&gt;%n异常时间：%d [%t]&lt;br/&gt;%n%m &lt;br/&gt;%n&lt;hr size=&quot;1&quot;/&gt;%n&lt;pre&gt;%exception&lt;/pre&gt;%n" />
-    </layout>
-  </appender>
-  <appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Log//Info//" />
-    <Encoding value="UTF-8" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="MaximumFileSize" value="20MB" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="DatePattern" value="yyyyMMdd&quot;.html&quot;" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="Header" value="&lt;html&gt;&lt;head&gt;&lt;style type=&quot;text/css&quot;&gt;body { font-size:14px; font-family:微软雅黑; }&lt;/style&gt;&lt;/head&gt;&lt;body onload=&quot;javascript:document.documentElement.scrollTop=99999999;&quot;&gt;" />
-      <param name="ConversionPattern" value="%n&lt;hr color=&quot;green&quot;/&gt;%n日志时间：%d [%t] &lt;br/&gt;%n%m &lt;br/&gt;%n" />
-    </layout>
-  </appender>
-</log4net>
+<configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <appSettings>
+  </appSettings>
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+      <!--AppID 150202，用于区分哪个应用的日志-->
+      <file value="D:\applog\150202\" />
+      <rollingStyle value="Composite" />
+      <datePattern value="yyyy-MM-dd&quot;.log&quot;" />
+      <staticLogFileName value="false" />
+      <param name="Encoding" value="utf-8" />
+      <maximumFileSize value="100MB" />
+      <!--<countDirection value="0" />-->
+      <maxSizeRollBackups value="100" />
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="记录时间：%date 线程：[%thread] 日志级别：%-5level 记录类：%logger 日志消息：%message%newline" />
+      </layout>
+    </appender>
+    <logger name="FileLogger" additivity="false">
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </logger>
+  </log4net>
+</configuration>
