--- a/LOG4NET/LOG4NET.csproj
+++ b/LOG4NET/LOG4NET.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Log4NetHelper.cs" />
+    <Compile Include="LOG4NET.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
