--- a/test_Assembly/test_Assembly.csproj
+++ b/test_Assembly/test_Assembly.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserDto.cs" />
+    <Compile Include="WxUnifiedOrderModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
