--- a/testXml/testXml.csproj
+++ b/testXml/testXml.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultXmlModel.cs" />
+    <Compile Include="XDocumentDemo.cs" />
     <Compile Include="XmlToObject.cs" />
   </ItemGroup>
   <ItemGroup>
